# fdi-pln2608

./: .gitignore  README.md  estado_butler.json  pyproject.toml
p1-g08/: README.md  pyproject.toml
p1-g08/pln/: __init__.py  config.py  game.py  main.py  state.py
p1-g08/pln/api/: client.py
p1-g08/pln/nlp/: llm.py  normalize.py  parse.py
p1-g08/pln/trading/: logic.py  offers.py
p2-g08/: README.md
p3-g08_C/: README.md  fdi-pln-2608-p3.py  largo.bin:Zone.Identifier
p3-g08_M/: fdi-pln-2608-p3.py
p4-g06/quijote_app/: config.py  corpus.py  indexing.py  models.py  search.py  utils.py
p4-g06/tests/: test_search.py
p4-g08/: README.md  pyproject.toml  requirements.txt
p4-g08 v.1/: README.md  pyproject.toml
p4-g08 v.1/quijote_app/: config.py  corpus.py  utils.py
p4-g08 v.1/tests/: test_search.py
p4-g08 v.2/: README.md  pyproject.toml  requirements.txt
p4-g08 v.2/quijote_app/: __init__.py  cli.py  search.py  utils.py
p4-g08 v.2/tests/: test_corpus.py  test_search.py
p4-g08/quijote_app/: cli.py  search.py  utils.py
p4-g08/tests/: test_normalization.py  test_search.py
p4-g08_v.1/: requirements.txt
p4-g08_v.1/quijote_app/: cli.py  indexing.py  models.py  search.py
p4-g08_v.1/tests/: test_corpus.py  test_normalization.py
p4-g08_v1/: README.md  pyproject.toml
p4-g08_v1/quijote_app/: __init__.py  cli.py  config.py  indexing.py  rag.py
p4-g08_v2/: .gitignore  README.md  pyproject.toml
p4-g08_v2/quijote_app/: __init__.py  __main__.py  cli.py  config.py  corpus.py  indexing.py  models.py  nlp.py  rag.py  search.py  utils.py
p4-g08_v2/tests/: test_corpus.py  test_normalization.py  test_search.py
p5-g08/: .gitignore  README.md  pyproject.toml
p5-g08/checkpoints/: p5_ner_2608.pth  tokenizer.pt
p5-g08/data/ner/: README.md  final.conll  merged.json
p5-g08/examples/: prompts.txt  text.txt
p5-g08/reports/: chat.json  generation_experiments.md  informe_2608.md  ner_metrics_2608.json
p5-g08/resources/: looking_glass.txt
p5-g08/src/fdi_pln_2608_p5/: __init__.py  attention.py  causal_llm.py  checkpoint.py  cli.py  data.py  evaluate.py  main.py  ner_llm.py  tokenizer.py  train_causal.py  train_ner.py  transformer.py  utils.py
p5-g08/src/fdi_pln_2608_p5/cli_app/: __init__.py  app.py  commands.py  interactive.py  render.py
p5-g08/src/fdi_pln_2608_p5/data/: __init__.py  dataset.py  prepare_ner_data.py
p5-g08/src/fdi_pln_2608_p5/evaluation/: __init__.py  evaluate_ner.py
p5-g08/src/fdi_pln_2608_p5/generation/: __init__.py  generate.py  ner_predict.py
p5-g08/src/fdi_pln_2608_p5/model/: __init__.py  ner.py  transformer.py
p5-g08/src/fdi_pln_2608_p5/modules/: __init__.py  attention.py  data.py  experiments.py  generate.py  model.py  ner.py  ner_predict.py  tokenizer.py  train.py  train_ner.py
p5-g08/src/fdi_pln_2608_p5/training/: __init__.py  train_causal.py  train_ner.py
pln/: config.py  game.py  logger.py  main.py  state.py
pln/api/: client.py
pln/nlp/: llm.py  normalize.py  parse.py
pln/trading/: logic.py  offers.py
pre-entrega_2601/: METADATOS.md  README.md  informe_etiquetado.html
pre-entrega_2601/asignaciones/asignaciones_parte1/: asignaciones.json  frases_seleccionadas.json  json_01.json  json_02.json  json_03.json  json_04.json  json_05.json  json_06.json  json_07.json  json_08.json  json_09.json  json_10.json  json_11.json  json_12.json  json_13.json
pre-entrega_2601/asignaciones/asignaciones_parte2/: asignaciones.json  frases_seleccionadas.json  json_01.json  json_02.json  json_03.json  json_04.json  json_05.json  json_06.json  json_07.json  json_08.json  json_09.json  json_10.json  json_11.json  json_12.json  json_13.json
pre-entrega_2601/corpus_original/: alice_in_wonderland.txt
pre-entrega_2601/etiquetados/json_01/: json_01_p1.json  json_01_p2.json
pre-entrega_2601/etiquetados/json_02/: json_02_p1.json  json_02_p2.json
pre-entrega_2601/etiquetados/json_03/: json_03_p1.json  json_03_p2.json
pre-entrega_2601/etiquetados/json_04/: json_04_p1.json  json_04_p2.json
pre-entrega_2601/etiquetados/json_05/: json_05_p1.json  json_05_p2.json
pre-entrega_2601/etiquetados/json_06/: json_6_p1.json  json_6_p2.json
pre-entrega_2601/etiquetados/json_07/: json_07_p1.json  json_07_p2.json
pre-entrega_2601/etiquetados/json_08/: json_08_p1.json  json_08_p2.json
pre-entrega_2601/etiquetados/json_09/: json_09_p1.json  json_09_p2.json
pre-entrega_2601/etiquetados/json_10/: json_10_p1.json  json_10_p2.json
pre-entrega_2601/etiquetados/json_11/: json_11_p1.json  json_11_p2.json
pre-entrega_2601/etiquetados/json_12/: json_12_p1.json  json_12_p2.json
pre-entrega_2601/extra/: bpe_tokenizer.json  tokens.json
pre-entrega_2601/scripts/: __init__.py  dataset.py  etiquetados.py  generar_jsons_6frases.py  merge.py  report.py  report_html.py  templates.py
(+2 files in other folders)
