[project]
name = "fdi-pln2608-p1"
version = "1.0"
description = "Agente de negocioación autónoma para PLN"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ollama>=0.6.1",
    "requests>=2.32.5",
    "httpx>=0.27.0",
]

[project.scripts]
fdi-pln-2608-p1 = "pln.main:main"

[tool.uv]
package = true
