[project]
name = "fdi-pln-2608-p1"
version = "1.0"
description = "Agente de negociación autónoma para PLN"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ollama>=0.6.1",
    "httpx>=0.27.0",
]

[project.scripts]
fdi-pln-2608-p1 = "pln.main:main"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "pln"
module-root = ""