[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quijote-app"
version = "0.1.0"
description = "CLI de búsqueda literal sobre Don Quijote para prácticas de PLN"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "beautifulsoup4>=4.12,<5",
  "typer>=0.12,<1",
  "joblib>=1.4,<2",
  "rich>=13.7,<14",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9"]

[project.scripts]
quijote-app = "quijote_app.cli:run"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
addopts = "-q"
