[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fdi-pln-2608-p4"
version = "1.0"
description = "Busqueda clasica por lemas en Don Quijote (PLN P4 v1)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12,<1",
  "rich>=13.7,<14",
  "spacy>=3.7.5,<4",
  "ollama" # <-- ¡AQUÍ ESTÁ LA NUEVA DEPENDENCIA!
]

[project.optional-dependencies]
dev = ["pytest>=8,<9"]

[project.scripts]
fdi-pln-2608-p4 = "quijote_app.cli:run"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
addopts = "-q"
