[project]
name = "fdi_pln_2608_p5"
version = "0.1.0"
description = "LLM pequeñito para la práctica 5"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.4",
    "torch",
]

[project.scripts]
fdi-pln-26XX-p5 = "fdi_pln_2608_p5.main:main"

[tool.uv]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
