[project]
name = "fdi_pln_2608_p5"
version = "1.0.0"
description = "Practica P5 de PLN: mini LLM Transformer causal y NER BIO"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click",
    "dynaconf",
    "loguru",
    "numpy",
    "python-dotenv",
    "rich",
    "torch",
    "typer",
]

[project.scripts]
fdi-pln-2608-p5 = "fdi_pln_2608_p5.cli:main"

[tool.uv]

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "double"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
